# doodle_classifier

./: Doodle_Classifier.sln  README.md
Doodle_Classifier/: CMakeLists.txt  Doodle_Classifier.cpp  Doodle_Classifier.vcxproj  Doodle_Classifier.vcxproj.filters  stdafx.cpp  stdafx.h
Doodle_Classifier/NeuralNetwork/: Activation.cpp  Activation.h  CMakeLists.txt  Makefile  ReseauNeuronal.cpp  ReseauNeuronal.h  VisualisationReseauNeuronal.cpp  VisualisationReseauNeuronal.h  cmake_install.cmake
